# pydevd_attach_bug

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/demo/: __init__.py  __main__.py  _demo.pyx
